--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "jquery": "^3.1.1",
+    "moment": "^2.15.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   }
